[package]
name = "sfo-account"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wugren/sfo-account.git"
license-file = "LICENSE"
description = "account library"

[dependencies]
async-trait = "0.1.81"
sfo-result = "0.2.4"
sha2 = "0.10.8"
base58 = "0.2.0"
log = "0.4"
sfo-http = { version = "0.6.7", features = ["openapi"] }
serde = { version = "1.0.218", features = ["derive"] }
rand = "0.9.0"

[features]
default = ["login"]
login = []
